# agent-reach-tech

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
agent_reach_tech/: __init__.py  catalog.py  cli.py  config_loader.py  doctor.py  mcp_server.py  research.py  triggers.py
agent_reach_tech/channels/: __init__.py  base.py  cve_nvd.py  exa_search.py  github.py  hackernews.py  lobsters.py  osv.py  reddit.py  registry.py  rss.py  web.py  youtube.py
agent_reach_tech/core/: __init__.py  deps.py  installer.py  mcp_install.py  skill_install.py  subprocess_runner.py
agent_reach_tech/hooks/: __init__.py  post_research.py
config/: channels.yaml  feeds.yaml  mcp.json  search-profiles.yaml  sources.yaml  triggers.yaml
docs/: ARCHITECTURE.md  MCP-SETUP.md  PLANO-SPRINTS.md
manifests/: projects.json
scripts/: benchmark.ps1  doctor-tech.ps1  install-mcp.ps1  install.ps1  post-research.ps1
skill/: SKILL.md
tests/: conftest.py  test_base.py  test_catalog.py  test_cli_v11.py  test_deps.py  test_doctor_offline.py  test_exa_search.py  test_github.py  test_installer.py  test_integration_e2e.py  test_integration_network.py  test_mcp_server.py  test_post_research.py  test_reddit.py  test_registry.py  test_research.py  test_rss.py  test_subprocess_runner.py  test_triggers.py  test_web.py  test_youtube.py
workflows/: analisar-cve.md  avaliar-biblioteca.md  monitorar-tendencias.md  pesquisar-oss.md
